--- a/Front-end/pages/Template-index.html
+++ b/Front-end/pages/Template-index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="../css/Template.css" />
   </head>
   <body>
+    <div class="bg-motion" aria-hidden="true">
+      <video autoplay muted loop playsinline preload="metadata">
+        <source src="../image/output_free.mp4" type="video/mp4" />
+      </video>
+      <span class="bg-motion-overlay"></span>
+    </div>
     <div class="layout">
       <section class="hero">
         <span class="badge">Real-time Fraud Risk</span>
@@ -26,12 +32,12 @@
           </div>
         </div>
       </section>
-      <section class="panel">
+      <section class="panel panel-hero-bg">
         <h2>Get started</h2>
         <p>Sign in or create a new compliance workspace.</p>
         <div class="cta-row">
-          <a class="btn btn-primary" href="Template-login.html">Sign in</a>
-          <a class="btn btn-ghost" href="Template-signup.html">Create account</a>
+          <a class="btn btn-primary" href="/login">Sign in</a>
+          <a class="btn btn-ghost" href="/signup">Create account</a>
         </div>
         <div class="info-grid">
           <div>
