--- a/Front-end/pages/Template-signup.html
+++ b/Front-end/pages/Template-signup.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="../css/Template-auth.css" />
   </head>
   <body>
+    <div class="bg-motion" aria-hidden="true">
+      <video autoplay muted loop playsinline preload="metadata">
+        <source src="../image/output_free.mp4" type="video/mp4" />
+      </video>
+      <span class="bg-motion-overlay"></span>
+    </div>
     <div class="layout">
       <section class="hero">
         <span class="badge">Secure Onboarding</span>
@@ -44,14 +50,14 @@
             <input type="password" name="password" required placeholder="Create a password" />
           </label>
           <button class="btn btn-primary" type="submit">Create account</button>
-          <p class="helper" id="signup-status">Developer: Manu.</p>
+          <p class="helper" id="signup-status"></p>
           <p class="footer">
-            Already have access? <a class="link" href="Template-login.html">Sign in</a>
+            Already have access? <a class="link" href="/login">Sign in</a>
           </p>
         </form>
       </section>
     </div>
-    <script src="js/Template-auth.js"></script>
+    <script src="../js/Template-auth.js"></script>
   </body>
 </html>
 
