Add visuals page, admin management, PDF upload, and deployment guide

--- a/Front-end/pages/Template-admin.html
+++ b/Front-end/pages/Template-admin.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Console | Market Fraud Detection System</title>
     <link rel="stylesheet" href="../css/Template.css" />
+    <link rel="stylesheet" href="../css/Template-visuals.css" />
   </head>
-  <body>
+  <body class="theme-experiment">
     <div class="bg-motion" aria-hidden="true">
       <video autoplay muted loop playsinline preload="metadata">
         <source src="../image/output_free.mp4" type="video/mp4" />
@@ -20,6 +21,7 @@
           <p class="helper">Manage users and roles.</p>
         </div>
         <div class="topbar-actions">
+          <a class="btn btn-ghost" href="/admin/users">User management</a>
           <a class="btn btn-ghost" href="/dashboard">Dashboard</a>
           <a class="btn btn-ghost" href="/logout">Logout</a>
         </div>
