--- a/Front-end/pages/Template-forgot.html
+++ b/Front-end/pages/Template-forgot.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reset Password | Market Fraud Detection System</title>
     <link rel="stylesheet" href="../css/Template-auth.css" />
+    <link rel="stylesheet" href="../css/Template-visuals.css" />
   </head>
-  <body>
+  <body class="theme-experiment">
     <div class="bg-motion" aria-hidden="true">
       <video autoplay muted loop playsinline preload="metadata">
         <source src="../image/output_free.mp4" type="video/mp4" />
