--- a/Front-end/pages/Template-dashboard.html
+++ b/Front-end/pages/Template-dashboard.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Risk Dashboard | Market Fraud Detection System</title>
     <link rel="stylesheet" href="../css/Template.css" />
+    <link rel="stylesheet" href="../css/Template-visuals.css" />
   </head>
-  <body>
+  <body class="theme-experiment">
     <div class="bg-motion" aria-hidden="true">
       <video autoplay muted loop playsinline preload="metadata">
         <source src="../image/output_free.mp4" type="video/mp4" />
@@ -86,16 +87,17 @@
         </div>
         <div class="panel center-content">
           <h2>Upload CSV</h2>
-          <p>Upload a CSV file to score multiple transactions at once.</p>
+          <p>Upload a CSV or PDF file to score multiple transactions at once.</p>
           <a class="btn btn-ghost" href="/csv/sample.csv" download>Download CSV template</a>
           <form class="form" id="csv-form">
             <label class="field">
-              CSV file
-              <input type="file" name="file" accept=".csv" required />
+              CSV/PDF file
+              <input type="file" name="file" accept=".csv,.pdf" required />
             </label>
             <button class="btn btn-primary" type="submit">Upload & score</button>
           </form>
           <p class="helper" id="csv-status">Waiting for file.</p>
+          <p class="helper helper-mini" id="csv-mini-status">No file selected.</p>
           <div class="result summary-card" id="csv-summary"></div>
           <div class="helper summary-card summary-card-muted" id="csv-sample"></div>
         </div>
@@ -114,28 +116,39 @@
       <section class="panel panel-viz panel-viz-full">
         <h2>Data visualization</h2>
         <p class="helper">Snapshot of recent fraud signals.</p>
-          <div class="viz-grid" aria-hidden="true">
-            <div class="viz-card">
-              <span class="viz-label">Risk trend</span>
-              <span class="viz-metric" id="viz-total">Total: --</span>
-              <div class="viz-line">
-                <svg viewBox="0 0 100 40" preserveAspectRatio="none">
-                  <polyline id="viz-trend-line" points="0,30 25,22 50,28 75,18 100,24"></polyline>
-                </svg>
-              </div>
+        <div class="viz-controls">
+          <label class="field field-inline">
+            Chart type
+            <select id="viz-type">
+              <option value="line">Line plot</option>
+              <option value="pie">Pie chart</option>
+              <option value="histogram">Histogram</option>
+            </select>
+          </label>
+        </div>
+        <div class="viz-grid">
+          <div class="viz-card">
+            <span class="viz-label" id="viz-title">Risk trend</span>
+            <span class="viz-metric" id="viz-total">Total: --</span>
+            <span class="viz-metric viz-fields" id="viz-fields">Fields: --</span>
+            <div class="viz-chart">
+              <svg id="viz-chart" viewBox="0 0 200 120" role="img" aria-label="Fraud chart"></svg>
             </div>
-            <div class="viz-card">
-              <span class="viz-label">Alerts mix</span>
-              <span class="viz-metric" id="viz-errors">Errors: --</span>
-              <div class="viz-bars">
-                <span class="viz-bar" data-index="0"></span>
-                <span class="viz-bar" data-index="1"></span>
-                <span class="viz-bar" data-index="2"></span>
-                <span class="viz-bar" data-index="3"></span>
-              </div>
+            <div class="viz-legend" id="viz-legend"></div>
+          </div>
+          <div class="viz-card">
+            <span class="viz-label">Alerts mix</span>
+            <span class="viz-metric" id="viz-errors">Errors: --</span>
+            <div class="viz-bars">
+              <span class="viz-bar" data-index="0"></span>
+              <span class="viz-bar" data-index="1"></span>
+              <span class="viz-bar" data-index="2"></span>
+              <span class="viz-bar" data-index="3"></span>
             </div>
           </div>
+        </div>
         <div class="viz-actions">
+          <a class="btn btn-primary" href="/visuals">Open visuals page</a>
           <button class="btn btn-ghost" id="download-visuals" type="button">
             Download visuals
           </button>
