--- a/Front-end/pages/Template-signup.html
+++ b/Front-end/pages/Template-signup.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Account | Market Fraud Detection System</title>
     <link rel="stylesheet" href="../css/Template-auth.css" />
+    <link rel="stylesheet" href="../css/Template-visuals.css" />
   </head>
-  <body>
+  <body class="theme-experiment">
     <div class="bg-motion" aria-hidden="true">
       <video autoplay muted loop playsinline preload="metadata">
         <source src="../image/output_free.mp4" type="video/mp4" />
@@ -47,7 +48,26 @@
           </label>
           <label class="field">
             Password
-            <input type="password" name="password" required placeholder="Create a password" />
+            <div class="password-field">
+              <input type="password" name="password" required placeholder="Create a password" />
+              <button class="password-toggle" type="button" aria-label="Show password">
+                Show
+              </button>
+            </div>
+          </label>
+          <label class="field">
+            Confirm password
+            <div class="password-field">
+              <input
+                type="password"
+                name="confirm_password"
+                required
+                placeholder="Re-enter your password"
+              />
+              <button class="password-toggle" type="button" aria-label="Show password">
+                Show
+              </button>
+            </div>
           </label>
           <button class="btn btn-primary" type="submit">Create account</button>
           <p class="helper" id="signup-status"></p>
