Add visuals insight and presentation assets

--- a/Front-end/pages/Template-visuals.html
+++ b/Front-end/pages/Template-visuals.html
@@ -104,6 +104,7 @@
         <div class="result summary-card" id="csv-summary"></div>
         <div class="helper summary-card summary-card-muted" id="csv-sample"></div>
         <div class="visuals-samples" id="vis-samples"></div>
+        <div class="visuals-insight" id="vis-insight"></div>
       </section>
     </div>
     <script src="../js/Template-visuals.js"></script>
